Allowing time to be split among multiple columns

--- a/gcmrc-ui/src/main/webapp/pages/stationview/page.css
+++ b/gcmrc-ui/src/main/webapp/pages/stationview/page.css
@@ -76,3 +76,11 @@ img { max-width: none; }
 .layersDiv label {
 	display : inline;
 }
+
+.addColumn, .addColumn:hover {
+	color : #00CC00;
+}
+
+.removeColumn, .removeColumn:hover {
+	color : #CC0000;
+}
