changes for GCMON-168 - links for research river trip data

--- a/gcmrc-ui/src/main/webapp/pages/networkreachview/page.css
+++ b/gcmrc-ui/src/main/webapp/pages/networkreachview/page.css
@@ -22,6 +22,7 @@
 		0px 0px 3px white,
 		0px 0px 3px white,
 		0px 0px 3px white,
+		0px 0px 3px white,
 		0px 0px 3px white;
 	filter:progid:DXImageTransform.Microsoft.dropshadow(Color='white', OffX=0, OffY=0);
 }
