--- a/gcmrc-ui/src/main/webapp/template/common.css
+++ b/gcmrc-ui/src/main/webapp/template/common.css
@@ -1,147 +1,166 @@
+/* ===OFFICIAL USGS STYLE SHEET===
+This CSS has been approved by all applicable parties and is subject to change...with prior notice. This CSS is meant to provide a consistent look and feel across all USGS Web pages and can be used in conjunction with the custom.css file and any additional style sheets of your own.
+
+DO NOT MODIFY THIS FILE IN ANY WAY.
+
+You can customize some areas of the header ONLY by making the changes in the custom.css file. Refer to the custom.css file for specific instructions.
+===END DISCLAIMER NOTICE===*/
+
+/* ===STANDARD HEADER===*/
+
 #usgscolorband {
-    background: url("http://www.usgs.gov/images/headers/hazards.jpg") no-repeat scroll 178px 0 #006633;
-    font: 14px Verdana,Arial,Helvetica,sans-serif;
-    height: 5.14em;
-    min-height: 72px;
-    width: 100%;
+	font: 14px Verdana, Arial, Helvetica, sans-serif;
+	width: 100%;
+	height: 5.14em;
+	background: #006633 url(http://www.usgs.gov/images/headers/hazards.jpg) 178px 0px no-repeat; 
+	min-height: 72px;
 }
 #usgsbanner {
-    height: 72px;
-    width: 100%;
+	width: 100%;
+	height: 72px;	
 }
 #usgsidentifier {
-    background-color: black;
-    float: left;
-    height: 5.14em;
-    width: 178px;
+	background-color: black;
+	width: 178px;
+	height: 5.14em;
+	float: left;
 }
 #usgsidentifier img {
-    border: medium none;
+	border: none;
 }
-#usgscoop {
-    background-color: black;
-    float: left;
-    height: 5.14em;
-    min-height: 72px;
-    padding-left: 18px;
-    position: relative;
-}
+#usgscoop { 
+	padding-left: 18px; 
+	position: relative; 
+	float: left;
+	height: 5.14em; 
+	background-color: black;
+	min-height: 72px;   
+} 
 #usgscoop img {
-    border: medium none;
-    margin-right: 3px;
+	margin-right: 3px;
+	border: none;
 }
-#usgstitle {
-    background-color: #006633;
-    border-bottom: 1px solid #FFFFFF;
-    border-top: 1px solid #FFFFFF;
-    clear: both;
-    color: #FFFFFF;
-    font: 14px Verdana,Arial,Helvetica,sans-serif;
-    height: 29px;
-    width: 100%;
-}
-#usgstitle p {
-    float: left;
-    font: bold 1.2em Verdana,Arial,Helvetica,sans-serif;
-    margin: 0;
-    padding: 5px;
-}
+#usgstitle { 
+	background-color: #006633; 
+	clear: both; 
+	width: 100%; 
+	border-bottom: 1px solid #ffffff; 
+	border-top: 1px solid #ffffff; 
+	font: 14px Verdana, Arial, Helvetica, sans-serif; 
+	color: #ffffff; 
+	height: 29px;
+} 
+#usgstitle p { 
+	font: bold 1.2em Verdana, Arial, Helvetica, sans-serif; 
+	padding: 5px; 
+	margin: 0px; 
+	float: left;
+} 
 #usgstitle label {
-    font-size: small;
-    font-weight: bold;
+	font-size: small;
+	font-weight: bold;
 }
 #usgstitle form {
-    float: right;
-    margin: 0;
-    padding: 5px;
+	float: right;
+	padding: 5px;
+	margin: 0px;
 }
 #usgstitle form input {
-    margin: 0;
+	margin: 0px;
 }
 #usgstitle #sa {
-    font-size: small !important;
+	font-size: small !important;
+	font-size: x-small;
 }
+/* ===STANDARD CUSTOMER SERVICE AREA===*/
 #usgsccsabox {
-    background-color: #000000;
-    float: right;
-    min-height: 72px;
+	float: right;
+	background-color: #000000;
+	min-height: 72px;
 }
 #usgsccsa {
-    font: 1em/0.5em Verdana,Arial,Helvetica,sans-serif;
-    height: 5.14em;
-    width: 10.5em;
+	font:  1em/.5em Verdana, Arial, Helvetica, sans-serif;
+	height: 5.14em;
+	width: 10.5em;
 }
-#usgsccsa a:link, #usgsccsa a:visited {
-    color: #FFFFFF;
-    font: bold 1em/1.3em Verdana,Arial,Helvetica,sans-serif;
-    margin-left: 4px;
-    text-decoration: none;
+#usgsccsa a:link, #usgsccsa a:visited { 
+	font: bold 1em/1.3em Verdana, Arial, Helvetica, sans-serif; 
+	color: #ffffff; 
+	margin-left: 4px; 
+	text-decoration: none; 
+} 
+#usgsccsa a:hover { 
+	font: bold 1em/1.3em Verdana, Arial, Helvetica, sans-serif; 
+	color: #ffffff; 
+	text-decoration: underline; 
+	margin-left: 4px; 
+} 
+#usgsccsa a:active { 
+	font: bold 1em/1.3em Verdana, Arial, Helvetica, sans-serif; 
+	color: #ffffff; 
+	margin-left: 4px; 
+	text-decoration: none; 
 }
-#usgsccsa a:hover {
-    color: #FFFFFF;
-    font: bold 1em/1.3em Verdana,Arial,Helvetica,sans-serif;
-    margin-left: 4px;
-    text-decoration: underline;
-}
-#usgsccsa a:active {
-    color: #FFFFFF;
-    font: bold 1em/1.3em Verdana,Arial,Helvetica,sans-serif;
-    margin-left: 4px;
-    text-decoration: none;
-}
+
+/* ===STANDARD CONTENT===*/
 body {
-    background-color: #FFFFFF;
-    color: #000000;
-    font-family: Verdana,Arial,Helvetica,sans-serif;
-    font-size: small;
+	font-family: Verdana, Arial, Helvetica, sans-serif;
+	font-size: small;
+	color: #000000;
+	background-color: #ffffff;
 }
+/*th, td {
+	font-family: Verdana, Arial, Helvetica, sans-serif;
+	font-size: small;
+}*/
+/* ===STANDARD FOOTER===*/
 #usgsfooter {
-    clear: both;
-    font-family: Verdana,Arial,Helvetica,sans-serif;
-    font-size: small;
-    margin: 0;
+	font-family: Verdana, Arial, Helvetica, sans-serif;
+	font-size: small;
+	clear: both;
+	margin: 0;
 }
 #usgsfooterbar {
-    background-color: #666666;
-    margin: 0;
-    padding: 4px;
+	background-color: #666666;
+	padding: 4px;
+	margin: 0;
 }
 #usgsfooterbar a:link, #usgsfooterbar a:visited {
-    color: #FFFFFF;
-    margin-right: 40px;
-    text-decoration: none;
+	margin-right: 40px;
+	color: #ffffff;
+	text-decoration: none;
 }
 #usgsfooterbar a:hover {
-    color: #FFFFFF;
-    margin-right: 40px;
-    text-decoration: underline;
+	margin-right: 40px;
+	color: #ffffff;
+	text-decoration: underline;
 }
 #usgsfooterbar a:active {
-    color: #FFFFFF;
-    margin-right: 40px;
-    text-decoration: none;
+	margin-right: 40px;
+	color: #ffffff;
+	text-decoration: none;
 }
 #usgsfootertext {
-    margin: 0;
-    padding: 4px;
+	padding: 4px;
+	margin: 0;
 }
 #usgsfootertext img {
-    border: medium none;
-    float: right;
-    margin-right: 5px;
+	border: none;
+	float: right;
+	margin-right: 5px;
 }
-#usgsccsabox, #usgsfooterbar, #usgsfootertext img {
-    display: none;
+/*===PRINT STYLES FOR TEMPLATE===*/
+@media print {
+		 #usgsccsabox, #usgsfooterbar, #usgsfootertext img {
+		 		 display:none;
+		 }
+		 #usgstitle { margin-bottom:15px; }
+		 #usgsfooter { padding-top:15px; }
+		 #usgsheader, #usgsbanner, #usgstitle p, #usgsfootertext {
+		 		 padding:0;
+		 		 margin:0;
+		 		 color:#000000;
+		 		 background:#ffffff;
+		 }
 }
-#usgstitle {
-    margin-bottom: 15px;
-}
-#usgsfooter {
-    padding-top: 15px;
-}
-#usgsheader, #usgsbanner, #usgstitle p, #usgsfootertext {
-    background: none repeat scroll 0 0 #FFFFFF;
-    color: #000000;
-    margin: 0;
-    padding: 0;
-}
+/*===END PRINT STYLES FOR TEMPLATE===*/
