--- a/gcmrc-ui/src/main/webapp/template/none.css
+++ b/gcmrc-ui/src/main/webapp/template/none.css
@@ -1,10 +1,5 @@
-.fp, .fm {
-    cursor: help;
-}
-#fm1, #fm2, #fm3, #fm4, #fm5, #fm6, #fm7, #fm8, #fm9, #fm10, #fm11, #fm12, #fm13, #fm14, #fm15, #fm16, #fm17, #fm18, #fm19, #fm20 {
-    display: none;
-}
-#f1, #f2, #f3, #f4, #f5, #f6, #f7, #f8, #f9, #f10, #f11, #f12, #f13, #f14, #f15, #f16, #f17, #f18, #f19, #f20 {
-    display: none;
-}
-
+/* CSS Document */
+.fp, .fm { cursor: help; }
+#fm1, #fm2, #fm3, #fm4, #fm5, #fm6, #fm7, #fm8, #fm9, #fm10, #fm11, #fm12, #fm13, #fm14, #fm15, #fm16, #fm17, #fm18, #fm19, #fm20 { display: none; }
+/*#fp1, #fp2, #fp3, #fp4, #fp5, #fp6, #fp7, #fp8, #fp9, #fp10, #fp11, #fp12, #fp13, #fp14, #fp15, #fp16, #fp17, #fp18, #fp19, #fp20 { display: none; }*/
+#f1, #f2, #f3, #f4, #f5, #f6, #f7, #f8, #f9, #f10, #f11, #f12, #f13, #f14, #f15, #f16, #f17, #f18, #f19, #f20 { display: none; }
