--- a/gcmrc-ui/src/main/webapp/template/custom.css
+++ b/gcmrc-ui/src/main/webapp/template/custom.css
@@ -618,7 +618,10 @@ h4 {font-weight:bold; color:#000000; font-size:small; margin-top:8px; margin-bot
 .capitalize {text-transform: capitalize;}
 .quote {font-style: italic; }
 .textBox p { margin-top: 0px; margin-right: 0px; margin-left: 0px; }
-
+.bedRadio { font-size: 1em; padding-top: 8px; margin-right: 10px;
+            padding-bottom: 10px;
+            margin-left: 10px; 
+            font-weight: bold;}
 .sectionWideTitle { font-size: 14px; height: 15px; padding-top: 3px; padding-bottom: 4px; padding-left: 8px;
     font-weight: bold; background-color: #f1f2f6; background-image: url(../template/images/bg_frontSections.jpg);
     background-repeat: no-repeat; background-position: left top; border: 1px solid #99cccc;
