--- a/gcmrc-ui/src/main/webapp/pages/stationview/page.css
+++ b/gcmrc-ui/src/main/webapp/pages/stationview/page.css
@@ -89,6 +89,10 @@ img { max-width: none; }
 .curveSelectButton {
 	display:none;
 	cursor: pointer;
+	margin: 2px;
+	border: 3px solid #c9c9c9;
+	border-radius: 6px;
+	background-color: #c9c9c9;
 }
 
 .curveSelectButton input[type=radio] {
@@ -97,40 +101,33 @@ img { max-width: none; }
 
 .curveSelectButton input[type=radio] + label {
 	display:inline-block;
-	margin:-2px;
 	padding: 4px 12px;
 	margin-bottom: 0;
-	font-size: 14px;
-	line-height: 20px;
-	color: #333;
+	font-size: 10px;
+	font-weight: 600;
+	line-height: 16px;
+	color: #333333;
 	text-align: center;
 	text-shadow: 0 1px 1px rgba(255,255,255,0.75);
 	vertical-align: middle;
-	background-color: #f5f5f5;
-	background-image: -moz-linear-gradient(top,#fff,#e6e6e6);
-	background-image: -webkit-gradient(linear,0 0,0 100%,from(#fff),to(#e6e6e6));
-	background-image: -webkit-linear-gradient(top,#fff,#e6e6e6);
-	background-image: -o-linear-gradient(top,#fff,#e6e6e6);
-	background-image: linear-gradient(to bottom,#fff,#e6e6e6);
-	background-repeat: repeat-x;
-	border: 1px solid #ccc;
-	border-color: #e6e6e6 #e6e6e6 #bfbfbf;
-	border-color: rgba(0,0,0,0.1) rgba(0,0,0,0.1) rgba(0,0,0,0.25);
-	border-bottom-color: #b3b3b3;
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff',endColorstr='#ffe6e6e6',GradientType=0);
-	filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
-	-webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,0.2),0 1px 2px rgba(0,0,0,0.05);
-	-moz-box-shadow: inset 0 1px 0 rgba(255,255,255,0.2),0 1px 2px rgba(0,0,0,0.05);
-	box-shadow: inset 0 1px 0 rgba(255,255,255,0.2),0 1px 2px rgba(0,0,0,0.05);
+	background-color: #c9c9c9;
 	cursor: pointer;
 }
 
 .curveSelectButton input[type=radio]:checked + label {
 	background-image: none;
 	outline: 0;
-	-webkit-box-shadow: inset 0 2px 4px rgba(0,0,0,0.15),0 1px 2px rgba(0,0,0,0.05);
-	-moz-box-shadow: inset 0 2px 4px rgba(0,0,0,0.15),0 1px 2px rgba(0,0,0,0.05);
-	box-shadow: inset 0 2px 4px rgba(0,0,0,0.15),0 1px 2px rgba(0,0,0,0.05);
-	background-color:#e0e0e0;
+	background-color: #f8f8f8;
 	cursor: pointer;
+	color: #0000FF;
+}
+
+#chart-view-label {
+	border-radius: 6px 0px 0px 6px;
+	margin-right: -2px;
+}
+
+#curve-view-label {
+	border-radius: 0px 6px 6px 0px;
+	margin-left: -2px;
 }
