GCMON-370: Added dynamic creation of per-plot duration curve toggle switches and fixed associated listeners and CSS.

--- a/gcmrc-ui/src/main/webapp/pages/stationview/page.css
+++ b/gcmrc-ui/src/main/webapp/pages/stationview/page.css
@@ -122,12 +122,12 @@ img { max-width: none; }
 	color: #0000FF;
 }
 
-#chart-view-label {
+.chart-view-label {
 	border-radius: 6px 0px 0px 6px;
 	margin-right: -2px;
 }
 
-#curve-view-label {
+.curve-view-label {
 	border-radius: 0px 6px 6px 0px;
 	margin-left: -2px;
 }
