--- a/gcmrc-ui/src/main/webapp/pages/stationview/page.css
+++ b/gcmrc-ui/src/main/webapp/pages/stationview/page.css
@@ -96,7 +96,7 @@ img { max-width: none; }
 }
 
 .curveSelectButton input[type=radio] {
-		display:none;
+	display:none;
 }
 
 .curveSelectButton input[type=radio] + label {
@@ -131,3 +131,52 @@ img { max-width: none; }
 	border-radius: 0px 6px 6px 0px;
 	margin-left: -2px;
 }
+
+.scaleSelectButton {
+	display:none;
+	float: right;
+	cursor: pointer;
+	margin: 2px;
+	border: 3px solid #c9c9c9;
+	border-radius: 6px;
+	background-color: #c9c9c9;
+}
+
+.scaleSelectButton input[type=radio] {
+	display:none;
+}
+
+.scaleSelectButton input[type=radio] + label {
+	display:inline-block;
+	padding: 4px 12px;
+	margin-bottom: 0;
+	font-size: 10px;
+	font-weight: 600;
+	line-height: 16px;
+	color: #333333;
+	text-align: center;
+	text-shadow: 0 1px 1px rgba(255,255,255,0.75);
+	vertical-align: middle;
+	background-color: #c9c9c9;
+	cursor: pointer;
+}
+
+.scaleSelectButton input[type=radio]:checked + label {
+	background-image: none;
+	outline: 0;
+	background-color: #f8f8f8;
+	cursor: pointer;
+	color: #0000FF;
+}
+
+.log-scale-label {
+	border-radius: 6px 0px 0px 6px;
+	margin-right: -2px;
+}
+
+.lin-scale-label {
+	border-radius: 0px 6px 6px 0px;
+	margin-left: -2px;
+}
+
+
