--- a/gcmrc-ui/src/main/webapp/pages/stationview/page.css
+++ b/gcmrc-ui/src/main/webapp/pages/stationview/page.css
@@ -109,7 +109,7 @@ img { max-width: none; }
 	color: #333333;
 	text-align: center;
 	text-shadow: 0 1px 1px rgba(255,255,255,0.75);
-	vertical-align: middle;
+	vertical-align: top;
 	background-color: #c9c9c9;
 	cursor: pointer;
 }
@@ -136,7 +136,8 @@ img { max-width: none; }
 	display:none;
 	float: right;
 	cursor: pointer;
-	margin: 2px;
+	margin: 10px 2px 2px 2px;
+	line-height: 10px;
 	border: 3px solid #c9c9c9;
 	border-radius: 6px;
 	background-color: #c9c9c9;
@@ -148,15 +149,15 @@ img { max-width: none; }
 
 .scaleSelectButton input[type=radio] + label {
 	display:inline-block;
-	padding: 4px 12px;
+	padding: 2px 6px;
 	margin-bottom: 0;
-	font-size: 10px;
+	font-size: 9px;
 	font-weight: 600;
-	line-height: 16px;
+	line-height: 10px;
 	color: #333333;
 	text-align: center;
 	text-shadow: 0 1px 1px rgba(255,255,255,0.75);
-	vertical-align: middle;
+	vertical-align: top;
 	background-color: #c9c9c9;
 	cursor: pointer;
 }
@@ -177,6 +178,12 @@ img { max-width: none; }
 .lin-scale-label {
 	border-radius: 0px 6px 6px 0px;
 	margin-left: -2px;
+}
+
+a .disabled {
+   pointer-events: none;
+   cursor: default;
+   color: graytext;
 }
 
 
