GCMON-474: Added UI support for downloading duration curve data. Now need to add the associated webservice.

--- a/gcmrc-ui/src/main/webapp/pages/stationview/page.css
+++ b/gcmrc-ui/src/main/webapp/pages/stationview/page.css
@@ -55,7 +55,8 @@
 }
 
 #downloadColumnOrdering li span {
-	position: absolute;
+	position: relative;
+	display: inline-block;
 	margin-left: -1.3em;
 }
 
