GCMON-474: Fixed download modal moving duration curve tab to a second row. Adjusted the order that the duration curves are generated in so that the downloaded data will be ordered by parameter first, not log/lin.

--- a/gcmrc-ui/src/main/webapp/pages/stationview/page.css
+++ b/gcmrc-ui/src/main/webapp/pages/stationview/page.css
@@ -189,10 +189,8 @@ div[class^="timeseries-plot-"], div[class^="duration-plot-"] {
 	width: 100%;
 }
 
-a .disabled {
-   pointer-events: none;
-   cursor: default;
-   color: graytext;
+#downloadPopup {
+	width: inherit;
 }
 
 
