GCMON-474: Added the ability to choose between downloading linear, logarithmic, or both datasets. Tweaked column names in downloaded data to be more readable. Added missing Percentage of Time Equaled or Exceeded column.

--- a/gcmrc-ui/src/main/webapp/pages/stationview/page.css
+++ b/gcmrc-ui/src/main/webapp/pages/stationview/page.css
@@ -193,4 +193,17 @@ div[class^="timeseries-plot-"], div[class^="duration-plot-"] {
 	width: inherit;
 }
 
+.datatype-select {
+	margin-bottom: 15px;
+}
+
+.datatype-select label {
+	margin-left: 8px;
+	font-size: 120%;
+	font-weight: bold;
+}
+.datatype-select input {
+	margin-left: 8px !important;
+}
+
 
