GCMON-486: Updated the UI to handle mixed availability of duration curves. Made duration curve toggles and duration curve scale toggles dynamic and created upon duration curve plotting success.

--- a/gcmrc-ui/src/main/webapp/pages/stationview/page.css
+++ b/gcmrc-ui/src/main/webapp/pages/stationview/page.css
@@ -181,7 +181,11 @@ img { max-width: none; }
 	margin-left: -2px;
 }
 
-.plot-container {
+.one-scale-only-label {
+	border-radius: 6px 6px 6px 6px;
+}
+
+div[class^="plot-container-"] {
 	width: 100%;
 }
 
