--- a/gcmrc-ui/src/main/webapp/pages/stationview/page.css
+++ b/gcmrc-ui/src/main/webapp/pages/stationview/page.css
@@ -195,6 +195,7 @@ div[class^="plot-container-"] {
 
 .dygraph-label.dygraph-ylabel {
 	margin-left: 90px;
+	font-size: 14px;
 }
 
 div[class^="timeseries-plot-"], div[class^="duration-plot-"] {
@@ -218,4 +219,8 @@ div[class^="timeseries-plot-"], div[class^="duration-plot-"] {
 	margin-left: 8px !important;
 }
 
-
+.dataChartView {
+	padding-left: 5px;
+	margin-right: 5px;
+	overflow: hidden;
+}
