remove weird hover behavior from footer links

--- a/gcmrc-ui/src/main/webapp/template/common.css
+++ b/gcmrc-ui/src/main/webapp/template/common.css
@@ -132,6 +132,7 @@ footer.footer .footer-doi ul.menu li a {
     color: #ffffff;
     float: left;
     font-size: 12px;
+    background-color: transparent;
 }
 
 footer.footer .footer-doi ul.menu li:first-of-type {
