--- a/gcmrc-ui/src/main/webapp/template/custom.css
+++ b/gcmrc-ui/src/main/webapp/template/custom.css
@@ -1,10 +1,4 @@
-html{
-   min-height: 100%; 
-}
-body {
-    font-size: small;
-    min-height: 100vh; 
-}
+body {font-size: small;}
 
 /* wrapper for all content on page. This div stes the minimum page width. */
 #wrapper { width: 100%; min-width: 960px; margin-right: auto; margin-left: auto; }
@@ -78,11 +72,7 @@ way to fit your requirements.
 
 
 /* Main Content Layout */
-#content {
-    margin-top: 15px; 
-    padding-bottom: 8px; 
-    min-height: 80vh;
-}
+#content {margin-top: 15px; padding-bottom: 8px; }
 .sectionWide { padding-right: 12px; padding-top: 8px; }
 
 
