--- a/gcmrc-ui/src/main/webapp/template/common.css
+++ b/gcmrc-ui/src/main/webapp/template/common.css
@@ -1,275 +1,166 @@
-@charset "UTF-8";
-/* CSS Document */
+/* ===OFFICIAL USGS STYLE SHEET===
+This CSS has been approved by all applicable parties and is subject to change...with prior notice. This CSS is meant to provide a consistent look and feel across all USGS Web pages and can be used in conjunction with the custom.css file and any additional style sheets of your own.
 
-footer, #navbar {
-	font-family: 'Source Sans Pro',sans-serif;
-	margin: 0;
-	position: relative;
-}
+DO NOT MODIFY THIS FILE IN ANY WAY.
 
-/**, *:before, *:after {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}	*/
+You can customize some areas of the header ONLY by making the changes in the custom.css file. Refer to the custom.css file for specific instructions.
+===END DISCLAIMER NOTICE===*/
 
-footer, header, main, nav, div {
-    display: block;
-}
+/* ===STANDARD HEADER===*/
 
-.tmp-container {
-	margin-right: auto;
-    margin-left: auto;
-    padding-left: 15px;
-    padding-right: 15px;
-}
-.tmp-container a {
-	text-decoration: none;
-    background: transparent;
-}
-.tmp-container a:-webkit-any-link {
-    cursor: auto;
-}
-.tmp-container:before, .tmp-container:after {
-    content: " ";
-    display: table;
-}
-.tmp-container:after {
-    clear: both;
-}
-
-hr {
-	width: 100%; 
-	margin-top: 42px;
-}
-@media only screen and (max-width:490px) {
-    hr {
-    margin-top: 60px;
-    }
-}
-
-/* header (only) nav */
-.header-nav {
-	background: #00264c;
-}
-
-.logo-header img {
-	margin-top: 8px;
-	margin-bottom: 8px;
-	border: 0;
-	max-width: 100%;
-	height: auto;
-}
-
-.header-search form {
-  float: right;
-  width: auto;
-  padding-top: 0;
-  padding-bottom: 0;
-  margin-right: 0;
-  margin-left: 0;
-  border: 0;
-  -webkit-box-shadow: none;
-          box-shadow: none;
-}
-
-.header-search input[type="search"] {
-	height: 30px;
-	width: 260px;
-	margin-top: 18px;
-}
-.header-search button[type="submit"] {
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	right: 15px;
-	border: 0;
-	color: #666;
-	background: transparent;
-	padding: 0;
-	width: 39px;
-	height: 39px;
-	margin-top: 21px;
-}
-
-input{line-height:normal}
-input[type="search"]{-webkit-appearance:textfield;-webkit-box-sizing:content-box;-moz-box-sizing:content-box;box-sizing:content-box}
-input[type="search"]::-webkit-search-cancel-button,input[type="search"]::-webkit-search-decoration{-webkit-appearance:none}
-input,button{font-family:inherit;font-size:inherit;line-height:inherit}
-
-
-/* Always float the navbar header */
-.navbar-header {
-  float: left;
-}
-
-/* footer (only) css */
-
-.menu.nav {
-    margin-bottom: 0;
-    padding-left: 0;
-    list-style: none;
-}
-
-.nav:before, .nav:after {
-   content: none;
-}
-footer.footer {
-	background: #00264c;
-	padding-bottom: 0px;
-	position: relative;
+#usgscolorband {
+	font: 14px Verdana, Arial, Helvetica, sans-serif;
 	width: 100%;
-	border-top: 1px solid #E5E5E5;
+	height: 5.14em;
+	background: #006633 url(https://www.usgs.gov/images/headers/hazards.jpg) 178px 0px no-repeat; 
+	min-height: 72px;
+}
+#usgsbanner {
+	width: 100%;
+	height: 72px;	
+}
+#usgsidentifier {
+	background-color: black;
+	width: 178px;
+	height: 5.14em;
+	float: left;
+}
+#usgsidentifier img {
+	border: none;
+}
+#usgscoop { 
+	padding-left: 18px; 
+	position: relative; 
+	float: left;
+	height: 5.14em; 
+	background-color: black;
+	min-height: 72px;   
+} 
+#usgscoop img {
+	margin-right: 3px;
+	border: none;
+}
+#usgstitle { 
+	background-color: #006633; 
+	clear: both; 
+	width: 100%; 
+	border-bottom: 1px solid #ffffff; 
+	border-top: 1px solid #ffffff; 
+	font: 14px Verdana, Arial, Helvetica, sans-serif; 
+	color: #ffffff; 
+	height: 29px;
+} 
+#usgstitle p { 
+	font: bold 1.2em Verdana, Arial, Helvetica, sans-serif; 
+	padding: 5px; 
+	margin: 0px; 
+	float: left;
+} 
+#usgstitle label {
+	font-size: small;
+	font-weight: bold;
+}
+#usgstitle form {
+	float: right;
+	padding: 5px;
+	margin: 0px;
+}
+#usgstitle form input {
+	margin: 0px;
+}
+#usgstitle #sa {
+	font-size: small !important;
+	font-size: x-small;
+}
+/* ===STANDARD CUSTOMER SERVICE AREA===*/
+#usgsccsabox {
+	float: right;
+	background-color: #000000;
+	min-height: 72px;
+}
+#usgsccsa {
+	font:  1em/.5em Verdana, Arial, Helvetica, sans-serif;
+	height: 5.14em;
+	width: 10.5em;
+}
+#usgsccsa a:link, #usgsccsa a:visited { 
+	font: bold 1em/1.3em Verdana, Arial, Helvetica, sans-serif; 
+	color: #ffffff; 
+	margin-left: 4px; 
+	text-decoration: none; 
+} 
+#usgsccsa a:hover { 
+	font: bold 1em/1.3em Verdana, Arial, Helvetica, sans-serif; 
+	color: #ffffff; 
+	text-decoration: underline; 
+	margin-left: 4px; 
+} 
+#usgsccsa a:active { 
+	font: bold 1em/1.3em Verdana, Arial, Helvetica, sans-serif; 
+	color: #ffffff; 
+	margin-left: 4px; 
+	text-decoration: none; 
 }
 
-footer.footer .footer-doi {
-	padding-right: 0;
-	padding-left: 0;
+/* ===STANDARD CONTENT===*/
+body {
+	font-family: Verdana, Arial, Helvetica, sans-serif;
+	font-size: small;
+	color: #000000;
+	background-color: #ffffff;
 }
-
-footer.footer .footer-doi ul.menu li a {
-    padding: 5px 0px;
-    color: #ffffff;
-    float: left;
-    font-size: 12px;
-    background-color: transparent;
-    cursor: pointer;
+/*th, td {
+	font-family: Verdana, Arial, Helvetica, sans-serif;
+	font-size: small;
+}*/
+/* ===STANDARD FOOTER===*/
+#usgsfooter {
+	font-family: Verdana, Arial, Helvetica, sans-serif;
+	font-size: small;
+	clear: both;
+	margin: 0;
 }
-
-footer.footer .footer-doi ul.menu li:first-of-type {
-    padding-left: 0px;
+#usgsfooterbar {
+	background-color: #666666;
+	padding: 4px;
+	margin: 0;
 }
-
-footer.footer .footer-doi ul.menu li {
-    float: left;
-    padding-right: 2px;
-    padding-left: 5px;
-}
-
-footer.footer .footer-doi ul.menu li:after {
-    content: "|";
-    color: #ffffff;
-    float: left;
-    padding-top: 5px;
-    padding-left: 7px;
-    font-size: 12px;
-}
-
-footer.footer .footer-doi ul.menu li:last-child:after {
-    content: "";
-}
-
-footer.footer .footer-wrap .menu.nav a {
-	padding: 4px 0px;
+#usgsfooterbar a:link, #usgsfooterbar a:visited {
+	margin-right: 40px;
 	color: #ffffff;
-	font-size: 12px;
+	text-decoration: none;
 }
-
-footer.footer .footer-social-links {
+#usgsfooterbar a:hover {
+	margin-right: 40px;
 	color: #ffffff;
-	font-size: 12px;
-	padding-right: 0;
+	text-decoration: underline;
 }
-
-footer.footer .footer-social-links ul {
-    float: right;
-	margin-top: 0px;
+#usgsfooterbar a:active {
+	margin-right: 40px;
+	color: #ffffff;
+	text-decoration: none;
 }
-
-footer.footer .footer-social-links ul li.follow {
-    padding-top: 6px;
-    padding-right: 5px;
+#usgsfootertext {
+	padding: 4px;
+	margin: 0;
 }
-
-footer.footer .footer-social-links ul li {
-    float: left;
-    height: 24px;
-    margin: 0 2px;
-    list-style: none;
-    list-style-type: none;
+#usgsfootertext img {
+	border: none;
+	float: right;
+	margin-right: 5px;
 }
-
-footer.footer .footer-social-links ul li:last-of-type {
-    margin-right: 0px;
+/*===PRINT STYLES FOR TEMPLATE===*/
+@media print {
+		 #usgsccsabox, #usgsfooterbar, #usgsfootertext img {
+		 		 display:none;
+		 }
+		 #usgstitle { margin-bottom:15px; }
+		 #usgsfooter { padding-top:15px; }
+		 #usgsheader, #usgsbanner, #usgstitle p, #usgsfootertext {
+		 		 padding:0;
+		 		 margin:0;
+		 		 color:#000000;
+		 		 background:#ffffff;
+		 }
 }
-
-footer.footer .footer-social-links ul li a i {
-	color:#fff;
-	font-size: 24px;
-}
-
-/* Font Awesome Social Media icons */
-/*!
- *  Font Awesome 4.7.0 by @davegandy - http://fontawesome.io - @fontawesome
- *  License - http://fontawesome.io/license (Font: SIL OFL 1.1, CSS: MIT License)
- */
-/* FONT PATH
- * -------------------------- */
-@font-face {
-  font-family: 'FontAwesome';
-  src: url('../fonts/fontawesome-webfont.eot');
-  src: url('../fonts/fontawesome-webfont.eot') format('embedded-opentype'), url('../fonts/fontawesome-webfont.woff2') format('woff2'), url('../fonts/fontawesome-webfont.woff') format('woff'), url('../fonts/fontawesome-webfont.ttf') format('truetype'), url('../fonts/fontawesome-webfont.svg') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-.fa-wrapper {
-	position: relative
-}
-.fa {
-  display: inline-block;
-  font: normal normal normal 14px/1 FontAwesome;
-  font-size: inherit;
-  text-rendering: auto;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-.fa-ul {
-  padding-left: 0;
-  margin-left: 2.14285714em;
-  list-style-type: none;
-}
-.fa-ul > li {
-  position: relative;
-}
-.fa-li {
-  position: absolute;
-  left: -2.14285714em;
-  width: 2.14285714em;
-  top: 0.14285714em;
-  text-align: center;
-}
-.fa-search:before {
-	content: "\f002";
-}
-.fa-twitter-square:before {
-Content: "\f081";
-}
-.fa-facebook-square:before {
-Content: "\f082";
-}
-.fa-github:before {
-    content: "\f09b";
-}
-.fa-google-plus-square:before {
-	content:"\f0d4"; 
-}
-.fa-flickr:before {
-	content: "\f16e";
-}
-.fa-youtube-play:before {
-    content: "\f16a";
-}
-.fa-instagram:before {
-    content: "\f16d";
-}
-.only {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  border: 0;
-}
-[role="button"]{cursor:pointer}
+/*===END PRINT STYLES FOR TEMPLATE===*/
