GCMON-734: dont show pink tiles when a tile requested results in a 404

--- a/gcmrc-ui/src/main/webapp/pages/reachview/page.css
+++ b/gcmrc-ui/src/main/webapp/pages/reachview/page.css
@@ -98,3 +98,8 @@ div[class^="plot-container-"] {
 div[class^="timeseries-plot-"], div[class^="duration-plot-"] {
 	width: 100%;
 }
+
+/* when OL encounters a 404, don't display the pink tile image */
+.olImageLoadError {  
+	display: none !important; 
+}
