GCMON-734: add css so that when tiles dont respond as expected they do not display

--- a/gcmrc-ui/src/main/webapp/pages/networkreachview/page.css
+++ b/gcmrc-ui/src/main/webapp/pages/networkreachview/page.css
@@ -36,3 +36,8 @@ img { max-width: none; }
 .layersDiv label {
 	display : inline;
 }
+
+/* when OL encounters a 404, don't display the pink tile image */
+.olImageLoadError { 
+	display: none !important; 
+}
